--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <p>
                           En My Seven encontrarás títulos originales increíbles que no están en ninguna otra parte. Películas, programas de TV, especiales y más pensados exclusivamente para ti.
                         </p>
-                        <button>Visitar</button>
+                        <a href="peliculas.html"><button>Visitar</button></a>
                     </div>
 
                     <div class="illustration"><div class="inner"></div></div>
@@ -141,7 +141,7 @@
                         <p>
                             El apodo de pantalla chica no le queda más. Desde sitcoms y dramas hasta viajes y entrevistas, estas son las series más grandes de la TV.
                         </p>
-                        <button>Visitar</button>
+                        <a href="series.html"><button>Visitar</button></a>
                     </div>
 
                     <div class="illustration"><div class="inner"></div></div>
@@ -154,7 +154,7 @@
                         <p>
                             Aventuras plagadas de acción, comedias diferentes, historias que inspiran: una selección de programas y películas de anime que hacen alarde de su estilo y espíritu únicos.
                         </p>
-                        <button>Visitar</button>
+                        <a href="anime.html"><button>Visitar</button></a>
                     </div>
 
                     <div class="illustration"><div class="inner"></div></div>
@@ -168,7 +168,7 @@
                             En My Seven, puedes encontrar toda la música que necesitas. ... Millones de canciones y podcasts. No necesitas tarjeta de crédito. <br>
                             Escucha tu música favorita sin interrupciones.  Saltos ilimitados. Cancela cuando quieras. +50 millones de canciones.  Descubre nueva música.
                         </p>
-                        <button>Visitar</button>
+                        <a href="musica.html"><button>Visitar</button></a>
                     </div>
 
                     <div class="illustration"><div class="inner"></div></div>
