--- a/index.html
+++ b/index.html
@@ -176,11 +176,9 @@
                 <div class="box5 box">
                     <div class="bg"></div>
                     <div class="details">
-                        <h1>I'm the fifth Box</h1>
+                        <h1>Conoce al Administrador</h1>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing 
-                            elit. Integer lacinia dui lectus. Donec scelerisque ipsum
-                            diam, ac mattis orci pellentesque eget. 
+                           Conoce al creador y administrador de My Seven and My Tems 
                         </p>
                         <button>Check Now</button>
                     </div>
