--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <p>
                            Conoce al creador y administrador de My Seven and My Tems 
                         </p>
-                        <button>Check Now</button>
+                        <a href="admin.html"><button>Visitar</button></a>
                     </div>
 
                     <div class="illustration"><div class="inner"></div></div>
